[gd_scene load_steps=25 format=3 uid="uid://0kgypwovs337"]

[ext_resource type="Texture2D" uid="uid://brceiligixde7" path="res://cannonbody.png" id="1_23j6s"]
[ext_resource type="Script" uid="uid://bmmuwdkx1xqmi" path="res://cannon.gd" id="1_72ky0"]
[ext_resource type="Texture2D" uid="uid://gq3hg7lakemj" path="res://cannonbase.png" id="2_72ky0"]
[ext_resource type="PackedScene" uid="uid://brinyuphwyqxd" path="res://ammo.tscn" id="4_763vu"]
[ext_resource type="FontFile" uid="uid://r1r0ixu4neeu" path="res://Tiny5.ttf" id="5_8be18"]
[ext_resource type="Texture2D" uid="uid://gup5y4hrw4mg" path="res://pirateship.png" id="5_emysx"]
[ext_resource type="Texture2D" uid="uid://xhcr0u20fuuv" path="res://uiblock.png" id="5_ovx8m"]
[ext_resource type="Texture2D" uid="uid://bs7e0aymcposm" path="res://clock.png" id="6_2bmeo"]
[ext_resource type="Texture2D" uid="uid://bqwcnnimf4dpn" path="res://bucketbottom.png" id="6_763vu"]
[ext_resource type="Texture2D" uid="uid://bfstqsu0ggmcg" path="res://buckettop.png" id="7_wtrx2"]
[ext_resource type="Theme" uid="uid://my1oxfrp8cyo" path="res://base_theme.tres" id="8_2bmeo"]
[ext_resource type="AudioStream" uid="uid://dugsx35h0pbf4" path="res://cannonshoot.mp3" id="8_wtrx2"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_23j6s"]
size = Vector2(28, 40)

[sub_resource type="Theme" id="Theme_763vu"]
HBoxContainer/constants/separation = 4

[sub_resource type="LabelSettings" id="LabelSettings_u0lv7"]
font = ExtResource("5_8be18")
font_size = 32
font_color = Color(0.262745, 0.262745, 0.309804, 1)

[sub_resource type="LabelSettings" id="LabelSettings_gk2a1"]
font_size = 72

[sub_resource type="LabelSettings" id="LabelSettings_iic0e"]
font = ExtResource("5_8be18")
font_size = 32
font_color = Color(0.262745, 0.262745, 0.309804, 1)
outline_color = Color(0.262745, 0.262745, 0.309804, 1)
shadow_size = 0
shadow_color = Color(0.262745, 0.262745, 0.309804, 1)
shadow_offset = Vector2(0, 0)

[sub_resource type="Animation" id="Animation_wjapt"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pirateship:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(112, -19)]
}

[sub_resource type="Animation" id="Animation_emysx"]
resource_name = "float"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pirateship:position")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(112, -20), Vector2(112, -24)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_763vu"]
_data = {
&"RESET": SubResource("Animation_wjapt"),
&"float": SubResource("Animation_emysx")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_emysx"]
size = Vector2(72, 76)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wjapt"]
size = Vector2(160, 44)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_763vu"]
size = Vector2(72, 56)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_odvvv"]
size = Vector2(32.2028, 40.0001)

[node name="Cannon" type="CharacterBody2D"]
process_mode = 1
motion_mode = 1
script = ExtResource("1_72ky0")

[node name="CannonBody" type="Node2D" parent="."]
position = Vector2(14, 6)
rotation = -1.57079

[node name="Cannonbody" type="Sprite2D" parent="CannonBody"]
rotation = 2.35619
scale = Vector2(4, 4)
texture = ExtResource("1_23j6s")
offset = Vector2(-3.5, -3.5)

[node name="FirePoint" type="Node2D" parent="CannonBody"]
position = Vector2(42.4264, -0.000198364)

[node name="Cannonbase" type="Sprite2D" parent="."]
scale = Vector2(4, 4)
texture = ExtResource("2_72ky0")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(14, 12)
shape = SubResource("RectangleShape2D_23j6s")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Control"]
layout_mode = 1
offset_left = 8.0
offset_top = 8.0
offset_right = 728.0
offset_bottom = 28.0
scale = Vector2(2, 2)
theme = SubResource("Theme_763vu")

[node name="Ammo" parent="CanvasLayer/Control/HBoxContainer" instance=ExtResource("4_763vu")]
layout_mode = 2

[node name="Ammo2" parent="CanvasLayer/Control/HBoxContainer" instance=ExtResource("4_763vu")]
layout_mode = 2

[node name="Ammo3" parent="CanvasLayer/Control/HBoxContainer" instance=ExtResource("4_763vu")]
layout_mode = 2

[node name="Ammo4" parent="CanvasLayer/Control/HBoxContainer" instance=ExtResource("4_763vu")]
layout_mode = 2

[node name="Ammo5" parent="CanvasLayer/Control/HBoxContainer" instance=ExtResource("4_763vu")]
layout_mode = 2

[node name="TimerParent" type="NinePatchRect" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -144.0
offset_top = 8.0
offset_right = -110.0
offset_bottom = 28.0
grow_horizontal = 0
scale = Vector2(4, 4)
texture = ExtResource("5_ovx8m")
patch_margin_left = 5
patch_margin_top = 1
patch_margin_right = 5
patch_margin_bottom = 5

[node name="TimerIcon" type="TextureRect" parent="CanvasLayer/Control/TimerParent"]
layout_mode = 0
offset_left = 6.0
offset_top = 6.0
offset_right = 14.0
offset_bottom = 14.0
texture = ExtResource("6_2bmeo")

[node name="Label" type="Label" parent="CanvasLayer/Control/TimerParent"]
layout_mode = 0
offset_left = 16.0
offset_top = 6.0
offset_right = 88.0
offset_bottom = 42.0
scale = Vector2(0.25, 0.25)
text = "30s"
label_settings = SubResource("LabelSettings_u0lv7")

[node name="DeathMenu" type="Control" parent="CanvasLayer"]
process_mode = 4
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="DeathMenu" type="ColorRect" parent="CanvasLayer/DeathMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -512.0
offset_top = -260.0
offset_right = 512.0
offset_bottom = 260.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.247059)

[node name="Label" type="Label" parent="CanvasLayer/DeathMenu/DeathMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -144.0
offset_top = -148.0
offset_right = 144.0
offset_bottom = -67.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("8_2bmeo")
text = "TIME'S UP!"
label_settings = SubResource("LabelSettings_gk2a1")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ResumeButton" type="Button" parent="CanvasLayer/DeathMenu/DeathMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -112.0
offset_top = -44.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2, 2)
theme = ExtResource("8_2bmeo")
text = "Play Again"

[node name="QuitButton" type="Button" parent="CanvasLayer/DeathMenu/DeathMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -112.0
offset_top = 60.0
offset_bottom = 105.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2, 2)
theme = ExtResource("8_2bmeo")
text = "Quit"

[node name="Pirateship" type="Sprite2D" parent="."]
position = Vector2(112, -19)
scale = Vector2(4, 4)
texture = ExtResource("5_emysx")
vframes = 2

[node name="Bucketbottom" type="Sprite2D" parent="Pirateship"]
position = Vector2(23, 9)
texture = ExtResource("6_763vu")

[node name="Buckettop" type="Sprite2D" parent="Pirateship"]
z_index = -3
z_as_relative = false
position = Vector2(23, 9)
texture = ExtResource("7_wtrx2")

[node name="Score" type="Label" parent="Pirateship"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -42.5
offset_top = -45.25
offset_right = 45.5
offset_bottom = -9.25
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.25, 0.25)
text = "100"
label_settings = SubResource("LabelSettings_iic0e")
horizontal_alignment = 1
vertical_alignment = 1
justification_flags = 35

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_763vu")
}

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2(20, 71)
shape = SubResource("RectangleShape2D_emysx")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="."]
position = Vector2(136, 87)
shape = SubResource("RectangleShape2D_wjapt")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="."]
position = Vector2(200, 73)
shape = SubResource("RectangleShape2D_763vu")

[node name="CollectionArea" type="Area2D" parent="."]
position = Vector2(14, 6)
rotation = -1.57079

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollectionArea"]
position = Vector2(-18.8974, 190)
shape = SubResource("RectangleShape2D_odvvv")
debug_color = Color(0.96574, 0, 0.484843, 0.42)

[node name="CannonShootSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_wtrx2")

[connection signal="pressed" from="CanvasLayer/DeathMenu/DeathMenu/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="CanvasLayer/DeathMenu/DeathMenu/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="body_entered" from="CollectionArea" to="." method="_on_collection_area_body_entered"]
